카운트 이벤트 수정 및 리드미 업데이트

--- a/sub4/css/sub4_content3.css
+++ b/sub4/css/sub4_content3.css
@@ -416,3 +416,11 @@ ul.tab_menu {
   background: #333;
   margin: 20px 0;
 }
+
+.topText {
+  position: fixed;
+  right: 0;
+  top: 0;
+  font-size: 50px;
+  z-index: 100;
+}
