--- a/media/css/sub3.css
+++ b/media/css/sub3.css
@@ -193,17 +193,17 @@ a.stopBtn {
     }
 
     to {
-        transform: translate(50%, 190%) scale(1.5);
+        transform: translate(50%, 193%) scale(1.5);
     }
 }
 
 @keyframes animationRotation4 {
     from {
-        transform: translate(50%, 190%) scale(1.5);
+        transform: translate(50%, 193%) scale(1.5);
     }
 
     to {
-        transform: translate(50%, 190%) scale(1.5) rotate(360deg);
+        transform: translate(50%, 193%) scale(1.5) rotate(360deg);
         ;
     }
 }
@@ -434,7 +434,7 @@ a.popup-youtube {
     .player {
         float: none;
         width: 70%;
-        margin: 0 auto;
+        margin: 8% auto;
     }
 
     .music .tab img.rotationImg1 {
@@ -449,14 +449,14 @@ a.popup-youtube {
         font-family: 'Cormorant Infant', serif;
         position: absolute;
         left: 40%;
-        top: 10%;
+        top: 0;
         margin-left: -110px;
         font-weight: 800;
         line-height: 1.3;
         color: transparent;
         background: linear-gradient(45deg, #fffa00, transparent), linear-gradient(273deg, #ff9b00, transparent);
         -webkit-background-clip: text;
-        animation: blink .8s infinite;
+        animation: blink 2s infinite;
     }
 
     @keyframes blink {
