--- a/media/css/sub3.css
+++ b/media/css/sub3.css
@@ -468,4 +468,10 @@ a.popup-youtube {
             opacity: 1;
         }
     }
+
+    a.playBtn, a.stopBtn {
+        font-size: 9vw;
+        display: inline-block;
+        text-align: center; 
+    }
 }
