--- a/mobile/sub1/css/sub1_1.css
+++ b/mobile/sub1/css/sub1_1.css
@@ -60,6 +60,9 @@ ul.visionlist {
 }
 
 .vision ul li {
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
   width: 100%;
   height: 130px;
   color: #fff;
