--- a/mobile/sub3/css/sub3_1.css
+++ b/mobile/sub3/css/sub3_1.css
@@ -63,6 +63,36 @@ ul.tab_menu a.tab {
   overflow: hidden;
   text-align: center;
   margin: 30px 0;
+  position: relative;
+}
+
+/* 삼각형 */
+.value ul::before {
+    display: block;
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -45%);
+    clip-path: polygon(50% 0, 0% 80%, 100% 80%);
+    background: #1f415c;
+    z-index: -2;
+}
+
+.value ul::after {
+    display: block;
+    content: '';
+    position: absolute;
+    width: 45%;
+    height: 92%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -45%);
+    clip-path: polygon(50% 0, 0% 80%, 100% 80%);
+    background: #fff;
+    z-index: -1;
 }
 
 .value p {
@@ -79,7 +109,7 @@ ul.tab_menu a.tab {
 
 .value ul li:first-child {
   width: 100%;
-  margin-bottom: 30px;
+  margin-bottom: 70px;
 }
 
 .value ul li:nth-child(2),
