--- a/mobile/sub3/css/sub3_1.css
+++ b/mobile/sub3/css/sub3_1.css
@@ -59,40 +59,25 @@ ul.tab_menu a.tab {
   text-align: center;
 }
 
-.value ul {
-  overflow: hidden;
-  text-align: center;
-  margin: 30px 0;
+.value {
   position: relative;
 }
 
-/* 삼각형 */
-.value ul::before {
-    display: block;
-    content: '';
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -45%);
-    clip-path: polygon(50% 0, 0% 80%, 100% 80%);
-    background: #1f415c;
-    z-index: -2;
+.value .value_img {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  left: 50%;
+  transform: translate(-50%, -5%);
+  background: url(../images/contribution.jpg) 0 0 no-repeat #fff;
+  background-size: contain;
+  overflow: hidden;
 }
 
-.value ul::after {
-    display: block;
-    content: '';
-    position: absolute;
-    width: 45%;
-    height: 92%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -45%);
-    clip-path: polygon(50% 0, 0% 80%, 100% 80%);
-    background: #fff;
-    z-index: -1;
+.value ul {
+  width: 100%;
+  color: #fff;
+  margin: 30px 0 40px;
 }
 
 .value p {
@@ -103,31 +88,9 @@ ul.tab_menu a.tab {
   margin: 0 5%;
 }
 
-.value ul li {
-  float: left;
-}
-
-.value ul li:first-child {
-  width: 100%;
-  margin-bottom: 70px;
-}
-
-.value ul li:nth-child(2),
-.value ul li:last-child {
-  width: 50%;
-}
-
 .value ul li span {
   display: block;
-  background: #01abce;
-  width: 90px;
   height: 90px;
-  border-radius: 50%;
-  margin: 0 auto;
-  box-sizing: border-box;
-  padding: 33px 0;
-  color: #fff;
-  font-weight: 500;
 }
 
 .socialAct li > p {
